# vibebridge

./: .RADME.md.swp  .dockerignore  .env.example  .gitignore  AGENTS.md  APPROVAL_README.md  AUTOSTART_README.md  CODE_OF_CONDUCT.md  COMMANDS_README.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  FEISHU_SETUP.md  LICENSE  OPENROUTER_README.md  PROJECT_CLEANUP_REPORT.md  RADME.md  README.md  README.zh.md  SECURITY.md  SESSION_MANAGEMENT_SUMMARY.md  TUNNEL_SETUP.md  VERSION.md  ai-project-tunnel.service  auto_recovery.sh  config.yaml.example  crontab.config  docker-compose.yml  install.sh  install_services.sh  manage.sh  manage_commands.py  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt  show_completion.sh  start_all.sh  test_encrypted_webhook.py  test_playwright.py  (+1 more)
.github/workflows/: ci.yml
app/: command_processor.py  feishu_card_handler.py  feishu_client.py  feishu_crypto.py  feishu_webhook_handler.py  file_sender.py  llm.py  main.py  message_deduplicator.py  opencode_integration.py  retry_handler.py  secure_config.py  session_manager.py  simple_skill_manager.py  task_parser.py  task_store.py  tunnel_manager.py
config/: commands.json  settings.json
deploy/: ai-project.service  crontab.config  opencode-feishu-bridge-tunnel.service  opencode-feishu-bridge.logrotate  opencode-feishu-bridge.service  vibebridge-tunnel.service  vibebridge.logrotate  vibebridge.service
docs/: AGENTS.md  APPROVAL_BOT_C_GUIDE.md  APPROVAL_README.md  AUTOSTART_README.md  CHANGELOG.md  COMMANDS_README.md  COMPLETION_SUMMARY.md  DEPLOYMENT_REPORT.md  FEISHU_PRIVATE_CHAT_SETUP.md  FEISHU_SETUP.md  FIXED_URL_SOLUTIONS.md  INTEGRATION_GUIDE.md  NEW_FEATURES.md  PROJECT_CLEANUP_SUMMARY.md  RELEASE.md  SECURITY.md  SUMMARY.md  TEST_RESULTS.md  TEST_SESSION_GUIDE.md  TEST_WEBSOCKET_GUIDE.md  TUNNEL_SETUP.md  VERSION.md  opencode_file_send_example.md
examples/: example_opencode_file_send.py  personal_website.html  send_existing_html.py
infra/: docker-compose.yml
scripts/: check_feishu_config.py  check_private_chat.py  cleanup_data.py  manage_commands.py  monitor_opencode.py  monitor_tunnel_url.sh  server_status.py  start_system.sh  test_deepseek.py  tunnel_monitor.py
scripts/install/: auto_recovery.sh  install_autostart.sh  install_services.sh  show_completion.sh
scripts/python/: approval_integration.py  approval_manager.py  check_api_endpoints.py  check_feishu_config.py  check_private_chat.py  create_test_session.py  create_test_session_simple.py  demo_message_flow.py  monitor_opencode.py  send_test_message.py  server_status.py  start_localtunnel.py  start_tunnel.py  switch_feishu_mode.py  test_realtime_opencode.py  test_single_command.py  test_webhook_locally.py  tunnel_monitor.py  update_tunnel_url.py
scripts/shell/: deploy-approval-system.sh  integrate-approval.sh  manage.sh  run_openclaw_gateway.sh  setup_openrouter.sh  start-bridge.sh  start.sh  start_all.sh
skills/: README.md  __init__.py  constitution.py  file_send_skill.py  github_skills.py  session_naming.py  skill_manager.py
src/: feishu_websocket.py  main.py  system.py
src/agents/: base.py  coordinator.py  feishu_agent.py  llm_agent.py  memory_agent.py  opencode_agent.py  skill_agent.py
src/approval/: __init__.py  feishu_handler.py  manager.py  routes.py
src/legacy/: __init__.py  command_processor.py  config_manager.py  feishu_card_handler.py  feishu_client.py  feishu_crypto.py  feishu_webhook_handler.py  file_sender.py  llm.py  main.py  message_deduplicator.py  opencode_integration.py  opencode_skill_manager.py  retry_handler.py  secure_config.py  session_manager.py  simple_skill_manager.py  task_parser.py  task_store.py  temp_file_manager.py  tunnel_manager.py
src/message_bus/: __init__.py  bus.py
src/vibebridge/: approval.py  cli.py  config.py  history.py  router.py  server.py  session.py  tasks.py
src/vibebridge/cards/: base.py  error.py  progress.py  result.py  start.py
src/vibebridge/im/: base.py  feishu.py
src/vibebridge/providers/: __init__.py  base.py  claude.py  kimi.py  openclaw.py  (+2 more)
tests/: conftest.py  test_all_commands.py  test_api.py  test_approval_system.py  test_card_click.py  test_card_interaction.py  test_command_fix.py  test_commands.py  test_current_status.py  test_encrypted_webhook.py  test_feishu_permissions.py  test_feishu_send.py  test_feishu_v2.py  test_file_send.py  test_full_card_flow.py  test_full_scenario.py  test_message.py  test_mode_switch.py  test_mode_switch_full.py  test_multi_agent_start.py  test_new_health.py  test_opencode_integration.py  test_real_card_click.py  test_real_opencode.py  test_realtime_task.py  test_send_message.py  test_session_cli.py  test_session_manager.py  test_session_simple.py  test_simple_api.py  test_single_command.py  test_successful_card.py  test_task_parser.py  test_vibebridge_basic.py  test_webhook.py  test_webhook_receive.py  test_webhook_simple.py  test_websocket.py  test_websocket_event.py  test_websocket_message.py  (+1 more)
