[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibebridge"
version = "0.2.0"
description = "The missing IM gateway for local AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VibeBridge Contributors"},
]
keywords = ["feishu", "lark", "ai-coding", "opencode", "kimi", "claude", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "click>=8.1",
    "typer>=0.12",
    "rich>=13.0",
    "cryptography>=42.0",
    "pyngrok>=7.1",
    "PyYAML>=6.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
vibebridge = "vibebridge.cli:main"

[project.urls]
Homepage = "https://github.com/akliedrak/vibebridge"
Repository = "https://github.com/akliedrak/vibebridge"
Issues = "https://github.com/akliedrak/vibebridge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "legacy: marks tests as legacy (slow, old architecture, may hang)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
